--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
     "compilerOptions": {
       "module": "commonjs",
       "target": "ES2015",
-      "sourceMap": true
+      "sourceMap": true,
+      "out": "dist"
     },
-    "include": ["index.ts"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules"]
   }
 
@@ -13,3 +14,5 @@
   //include - 어떤 파일들이 컴파일과정에 포함 되는지 알려줌. 배열의 형태로 적어줌
 
   //node.js는 typescript를 이해하지 못하기 때문에 javascript로 컴파일 먼저 해줘야함
+
+  // 내 모든 타입스크립트는 src로 들어가고 컴파일된 모든것은 dist로 들어감
