tsc woriking now

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "commonjs",
       "target": "ES2015",
       "sourceMap": true,
-      "out": "dist"
+      "outDir": "dist"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
