--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
-  "repository": {
-    "type": "git",
-    "url": "git+https://theharriet@github.com/theharriet/typechain.git"
-  },
+  "repository": "git+https://theharriet@github.com/theharriet/typechain.git",
   "keywords": [],
-  "author": "",
+  "author": "theharriet <goand123@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "tsc-watch --onSuccess \" node dist/index.js\" "
@@ -17,5 +13,12 @@
   "bugs": {
     "url": "https://github.com/theharriet/typechain/issues"
   },
-  "homepage": "https://github.com/theharriet/typechain#readme"
+  "homepage": "https://github.com/theharriet/typechain#readme",
+  "dependencies": {
+    "crypto-js": "^4.1.1",
+    "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "tsc-watch": "^4.5.0"
+  }
 }
